# prompted-seg-service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-cuda  README.md  TESTING.md  celery_app.py  docker-compose.yml  env.example  paths.py  pyproject.toml  pytest.ini
app/: __init__.py  state.py
app/routes/: __init__.py  images.py  inference.py  models.py  segment_2D.py
app/schemas/: prompts.py  segment_2D.py
app/util/: model_registry.py  prompts.py
models/: base_models.py  model_cache.py  model_registry.py  prompts.py  register_models.py  sam2.py  sam3.py
tests/: __init__.py  test_inference.py
