[project]
name = "coral-prompted-seg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi[standard]>=0.116.2",
    "hydra-core>=1.3.2",
    "iquana-toolbox",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "sam2>=1.1.0",
    "torch",
    "torchvision",
    "transformers>=4.57.1",
]

[tool.uv.sources]
iquana-toolbox = { git = "https://github.com/Iquana-tool/iquana-toolbox.git" }

