[project]
name = "coral-prompted-seg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi[standard]>=0.116.2",
    "iquana-toolbox",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "torch",
    "torchvision>=0.26.0",
    "transformers==5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
iquana-toolbox = { git = "https://github.com/Iquana-tool/iquana-toolbox.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

